@@ -1,8 +1,5 @@
 #include "dungeon.h"
 
-#include <stdio.h>
-#include <stdlib.h>
-#include <stdint.h>
 #include <time.h>
 
 
@@ -10,12 +7,7 @@ int main(int argc, char** argv)
 {
     Dungeon d;
     generate_dungeon(&d, time(NULL));
-
-    for(uint32_t y = 0; y < 21; y++)
-    {
-        printf("%.80s\n", d.printable[y]);
-    }
-
+    print_dungeon(&d, 1);
     destruct_dungeon(&d);
 
     return 0;
