@@ -1,13 +1,10 @@
-#include "perlin.h"
+#include "util/perlin.h"
 
-#include <stdlib.h>
 #include <stdint.h>
 #include <math.h>
-#include <string.h>
 
-/*
- * https://cs.nyu.edu/~perlin/noise/
-*/
+/* Based on Java example by Ken Perlin:
+ * https://cs.nyu.edu/~perlin/noise/ */
 
 static uint8_t
     p[] = { 151,160,137,91,90,15,
